Next release
  - support date.timezone in ini files
  - implement fileinfo

"Sausage" 14-Oct-2013
  - Direct invocation of callable arrays: $f = [$cls_or_instance, 'method']; $f()
  - ASAN clean
  - Support dynamically loadable extensions
  - Support loading mini-systemlibs from extensions

"Tabasco" 30-Sep-2013
  - Fix issues with __toString() functions that return non-string values
  - Don't allow mock classes to extend collection classes
  - Smarter memory allocation and scheduling for NUMA systems
  - Improve profiler performance in the jit
  - Fix several Zend compatibility issues
  - Fix several bugs uncovered by ASAN
  - Add collection support to array_keys, array_values, and array_combine
  - Return a set-like array from Set::toArray
  - Add to(Vector|Map|StableMap|Set) methods to collections
  - Collections convert to boolean false when empty
  - get_class_vars invokes the autoloader when necessary
  - Rework the Zend compatibility layer to be more robust
  - Allow traits to implement interfaces
  - Support arbitrary expressions inside empty()

"Bobotie" 16-Sep-2013
  - HNI (HipHop Native Interface) for calling C++ functions from Php
  - Fix PropertyAccessorMap::isset
  - Expose more POSIX constants
  - Fixed behavior of stream_get_contents when default args are used.
  - Implement str_getcsv, and fix some fgetcsv related issues.
  - [IPv6] Fix stream_socket_recvfrom & stream_socket_sendto.
  - [IPv6] Fix socket_sentto_recvfrom_ipv6_udp Zend compatibility.
  - Optimize closure invocation and __invoke (~3x faster to invoke)
  - Import gettext extension
  - string and object allocation optimizations (reduced memory usage for both)
  - Import YAML extension
  - Import ftp extension

"Kimchi" 2-Sep-2013
  - Fix order of custom attributes and visibility in  ctor arg promotion
  - Implement CachingIterator
  - Implement RecursiveCachingIterator
  - Generalized heuristic for choosing when to inline in the jit